# islamic-onthisday

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CLAUDE.md  EDITORIAL.md  LICENSE  Makefile  README.md  WAVES_PLAN.md  docker-compose.dokploy.yml  docker-compose.yml  lesson_plan.py
backend/: .env.development  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  openapi.json  package.json  pyproject.toml
backend/iotd/: __init__.py  app.py  database.py  dependencies.py  logger_config.py  observability.py  settings.py
backend/iotd/api/: cache.py  constants.py  errors.py  middleware.py  rate_limit.py
backend/iotd/api/controllers/: account.py  auth.py  bookmarks.py  email_verification.py  events.py  health.py  lessons.py  observances.py  password_reset.py  people.py  recent.py  today.py
backend/iotd/api/routes/: auth.py  bookmarks.py  debug.py  events.py  health.py  lessons.py  observances.py  people.py  recent.py  today.py  upcoming.py
backend/iotd/api/schemas/: auth.py  bookmark.py  event.py  health.py  lesson.py  list.py  observance.py  person.py  shared.py  today.py
backend/iotd/api/services/: auth.py  calendar.py  email.py  email_templates.py  projections.py
backend/iotd/api/utils/: cache.py
backend/iotd/email_templates/: _button.html  _layout.html  email_change_verify.txt  email_verification.html  password_reset.txt
backend/iotd/models/: __init__.py  user.py
backend/scripts/: users.py
backend/tests/: conftest.py  test_account.py  test_auth.py  test_bookmarks.py  test_cache.py  test_email_verification.py  test_errors.py  test_events.py  test_health.py  test_lessons.py  test_list_search_observances_people.py  test_middleware.py  test_observances_and_people.py  test_password_reset.py  test_projections.py  test_recent.py  test_today.py
backend/thaqafa/: __init__.py  app.py  database.py  dependencies.py  observability.py  settings.py  version.py
backend/thaqafa/api/: errors.py  middleware.py  rate_limit.py
backend/thaqafa/api/controllers/: account.py  auth.py  bookmarks.py  email_verification.py  events.py  health.py  lessons.py  observances.py  password_reset.py  people.py  recent.py  today.py
backend/thaqafa/api/routes/: auth.py  bookmarks.py  debug.py  events.py  health.py  lessons.py  observances.py  people.py  recent.py  today.py  upcoming.py
backend/thaqafa/api/schemas/: auth.py  bookmark.py  event.py  health.py  lesson.py  observance.py  person.py  shared.py  today.py
backend/thaqafa/api/services/: __init__.py  auth.py  calendar.py  email.py  email_templates.py  projections.py
backend/thaqafa/email_templates/: _layout.html  email_change_notice.html  email_change_notice.txt  email_change_verify.html  email_change_verify.txt  email_verification.html  email_verification.txt  password_changed.html  password_changed.txt  password_reset.html  password_reset.txt
backend/thaqafa/models/: user.py
data-pipeline/: .gitignore  pyproject.toml
data-pipeline/data/curated/: observances.yaml  people.yaml  sources.yaml
data-pipeline/data/curated/events/: 00_legacy.yaml  01_prophetic_additions.yaml  02_rashidun_additions.yaml  03_umayyad_abbasid_additions.yaml  04_andalus_additions.yaml  05_ottoman_mughal_additions.yaml  06_scholars_additions.yaml  07_women_of_islam.yaml  08_modern_scholars.yaml  09_scientists_polymaths.yaml  (+97 more)
data-pipeline/data/output/: validation_report.md
data-pipeline/scripts/discovery/: openiti_leads.py  wikidata_leads.py
data-pipeline/src/pipeline/: __init__.py  build.py  constants.py  database.py  dataset_meta.py  quran_extracts.py  source_urls.py  syndicate.py  syndication.py  validate.py  verify.py
(+251 files in other folders)
