[project]
name = "thaqafa-api"
version = "0.1.0"
description = "FastAPI backend for Thaqafa"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    # Source-of-truth schema lives in the pipeline package; we install it as
    # an editable path dependency so models stay in sync.
    "thaqafa-pipeline",
    "sentry-sdk[fastapi]>=2.58.0",
    "slowapi>=0.1.9",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.0",
    "email-validator>=2.2.0",
    "resend>=2.4.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.uv.sources]
thaqafa-pipeline = { path = "../data-pipeline", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thaqafa"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C90", "N", "PL", "ARG"]
ignore = ["E501", "PLR0913", "PLR2004", "ARG002", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["thaqafa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]

[dependency-groups]
dev = [
    "poethepoet>=0.41.0",
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.poe.tasks]
lint = "ruff check thaqafa tests"
format = "ruff format thaqafa tests"
format-check = "ruff format --check thaqafa tests"
check = ["lint", "format-check"]
lint-fix = "ruff check --fix thaqafa tests"
fix = ["format", "lint-fix"]
test = "pytest"
test-fast = "pytest -x"
# Run before every commit. Same gate as CI: lint + format-check + test.
pre-commit = ["check", "test"]
dev = "uvicorn thaqafa.app:app --reload --host 127.0.0.1 --port 5111"
